--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
             <h4 class="title"><img aling="lefth" src="./Biogen/assets/img/logo.png" width="70" height="60"><br><a href="./Biogen/index.html" target="_blank">Pagina Web para una empresa de fertilizantes</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
           </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <h4 class="title"><img aling="lefth" src="./Biogen/assets/img/logo.png" width="70" height="60"><br><a href="./Biogen/index.html" target="_blank">Pagina Web para una empresa de fertilizantes</a></h4>
+            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+          </div>
           
 
       </div>
