--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <section class="idioma">
+    <a href="en.html"><img  src="assets/img/estados-unidos.png"></a>
+</section>
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rodrigo Araya Noguera</h1>
