--- a/index.html
+++ b/index.html
@@ -252,7 +252,10 @@
               a su información por medio de un web site.
             </p>
           </div>
-          
+           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <h4 class="title"><img aling="lefth" src="./canaveral/assets/img/logo.png" width="70" height="60"><br><a href="./canaveral/index.html" target="_blank">Pagina Web de un restaurante</a></h4>
+            <p class="description">Restaurante de renombre en la región que que digitaliza su presencia en la web  </p>
+          </div>
 
       </div>
     </section><!-- End Services Section -->
