--- a/canaveral/index.html
+++ b/canaveral/index.html
@@ -84,90 +84,102 @@
 	    </div>
 	</div>
 
-	<hr>
+	
+	<!-- Galeria -->
 
-	<div class="container-fluid container-web-page">
-	    <h3 class="text-center text-uppercase poppins-regular font-weight-bold">Nuestros platillos más populares</h3>
-	    <div class="container-cards full-box">
-
-	        <div class="card shadow-1-strong">
-	            <img class="card-img-top" src="./assets/platillos/platillo.jpg" alt="nombre_platillo">
-	            <div class="card-body text-center">
-	                <h5 class="card-title font-weight-bold">Nombre o titulo del platillo</h5>
-	                <p class="card-text lead"><span class="badge bg-secondary">$25.00 USD</span></p>
-	            </div>
-	            <div class="card-body text-center">
-	                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-shopping-bag fa-fw"></i> &nbsp; Agregar</button>
-	                &nbsp; &nbsp;
-	                <a href="details.html" class="btn btn-info btn-sm"><i class="fas fa-utensils fa-fw"></i> &nbsp; Detalles</a>
-	            </div>
+	<section class="galery">
+		<br>
+		<h3 class="text-center text-uppercase poppins-regular font-weight-bold">Galería</h3>
+		<div class="row">
+	        <div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">ENTRADAS</h5>
+				<section class=" container">
+					<img src="assets/img/Sopa-Azteca-400x284.jpg" alt="Beef and Onions">
+				</section>
 	        </div>
-
-	        <div class="card shadow-1-strong">
-	            <img class="card-img-top" src="./assets/img/img_not_found.jpg" alt="nombre_platillo">
-	            <div class="card-body text-center">
-	                <h5 class="card-title font-weight-bold">Nombre o titulo del platillo</h5>
-	                <p class="card-text lead"><span class="badge bg-secondary">$25.00 USD</span></p>
-	            </div>
-	            <div class="card-body text-center">
-	                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-shopping-bag fa-fw"></i> &nbsp; Agregar</button>
-	                &nbsp; &nbsp;
-	                <a href="details.html" class="btn btn-info btn-sm"><i class="fas fa-utensils fa-fw"></i> &nbsp; Detalles</a>
-	            </div>
+	        <div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">ALMUERZOS EJECUTIVOS</h5>
+				<section class=" container">
+					<img src="assets/img/Lomo-de-Res-Encebollado-400x284.jpg" alt="Sopa-Azteca">
+				</section>
 	        </div>
-
-	        <div class="card shadow-1-strong">
-	            <img class="card-img-top" src="./assets/platillos/platillo.jpg" alt="nombre_platillo">
-	            <div class="card-body text-center">
-	                <h5 class="card-title font-weight-bold">Nombre o titulo del platillo</h5>
-	                <p class="card-text lead"><span class="badge bg-secondary">$25.00 USD</span></p>
-	            </div>
-	            <div class="card-body text-center">
-	                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-shopping-bag fa-fw"></i> &nbsp; Agregar</button>
-	                &nbsp; &nbsp;
-	                <a href="details.html" class="btn btn-info btn-sm"><i class="fas fa-utensils fa-fw"></i> &nbsp; Detalles</a>
-	            </div>
+	        <div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">EMPAREDADOS Y HAMBURGUESAS </h5>
+				<section class=" container">
+					<img src="assets/img/banner_2.jpg" alt="Beef Hamburger">
+				</section>
 	        </div>
-
+			<div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">PASTAS</h5>
+				<section class=" container">
+					<img src="assets/img/Fettuccine-con-Lomito-400x284.jpg" alt="Steak Fettuccine Alfredo">
+				</section>
+	        </div>
 	    </div>
-	    <br>
-	    <p class="text-center"><a href="menu.html" class="btn btn-primary"><i class="fas fa-hamburger fa-fw"></i> &nbsp; Ir al menu</a></p>
-	</div>
+		<br>
+		<div class="row">
+	        <div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">RES</h5>
+				<section class=" container">
+					<img src="assets/img/banner_3.jpg" alt="Arrachera">
+				</section>
+	        </div>
+	        <div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">CERDO</h5>
+				<section class=" container">
+					<img src="assets/img/Costilla-de-Cerdo-400x284.jpg" alt="Barbecue Ribs">
+				</section>
+	        </div>
+	        <div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">MARISCOS Y PESCADO</h5>
+				<section class=" container">
+					<img src="assets/img/Tilapa-a-la-Naranja-400x284.jpg" alt="Orange Tilapia">
+				</section>
+	        </div>
+			<div class="col-12 col-sm-6 col-md-3">
+	            <h5 class="text-center text-uppercase poppins-regular font-weight-bold">POSTRES</h5>
+				<section class=" container">
+					<img src="assets/img/Creme-Brulee-400x284.jpg" alt="Tropical Créme Brûlée">
+				</section>
+	        </div>
+	    </div>
+		<br>
+	</section>
 
-	<hr>
-
+	
 	<!-- Footer -->
 	<footer class="footer">
 	    <div class="container">
+
 	        <div class="row">
-	            <div class="col-12 col-md-4">
-	                <ul class="list-unstyled" >
-	                    <li><h5 class="font-weight-bold" >El Salvador</h5></li>
-	                    <li><i class="fas fa-map-marker-alt fa-fw"></i> San Salvador, El Salvador, Centro América</li>
-	                </ul>
+	            <div class="col-12 col-md-6">
+	                    <h2 class="font-weight-bold text-center">Cómo llegar	?</h2>
+	                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15695.727032935034!2d-85.0941536!3d10.4269901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x78d81a5864fcca90!2sRestaurante%20Ca%C3%B1averal!5e0!3m2!1ses-419!2scr!4v1657914632155!5m2!1ses-419!2scr"
+						style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
 	            </div>
-	            <div class="col-12 col-md-4">
+	            <div class="col-12 col-md-6 redes">
 	                <ul class="list-unstyled" >
-	                    <li><h5 class="font-weight-bold" >Siguenos en:</h5> </li>
+	                    <li><h5 class="font-weight-bold" >Siguenos en :</h5> </li>
 	                    <li>
-	                        <a href="https://es-la.facebook.com/CarlosAlfaroES/" class="footer-link" target="_blank" >
+	                        <a href="https://www.facebook.com/canaveralcr" class="footer-link" target="_blank" >
 	                            <i class="fab fa-facebook fa-fw"></i> Facebook
 	                        </a>
 	                    </li>
 
 	                    <li>
-	                        <a href="https://www.youtube.com/c/CarlosAlfaro007" class="footer-link" target="_blank" >
-	                            <i class="fab fa-youtube fa-fw"></i>
-	                                Youtube
+	                        <a href="https://www.instagram.com/canaveralcr/" class="footer-link" target="_blank" >
+	                            <i class="fab fa-Instagram fa-fw"></i>
+	                                Instagram
 	                        </a>
 	                    </li>
 	                </ul>
 	            </div>
 	        </div>
+			<br>
 			<div class="copy-write">
 				<ul class="list-unstyled" >
 					<li><h5 class="font-weight-bold" ><i class="far fa-copyright" ></i>Rodrigo Araya Noguera 2022 </h5></li>
-					<li> Todos los derechos reservados </li>
+					<li> Todos los derechos reservados</li>
 				</ul>
 			</div>
 	    </div>
