--- a/index.html
+++ b/index.html
@@ -238,25 +238,47 @@
 
     <!-- ======= Portafolio Section ======= -->
     <section id="services" class="services">
-      <div class="container">
+      <div class="section-title">
+        <h2>Portafolio</h2>
+        <p>En esta sección podrás encontrar algunos de los proyectos realizados.</p>
+      </div>
 
-        <div class="section-title">
-          <h2>Portafolio</h2>
-          <p>En esta sección podrás encontrar algunos de los proyectos realizados.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <h4 class="title"><img aling="lefth" src="./Biogen/assets/img/logo.png" width="70" height="60"><br><a href="./Biogen/index.html" target="_blank">Pagina Web para una empresa de fertilizantes</a></h4>
-            <p class="description">Pequeña empresa que buscaba abrirse paso en el mercado y que los clientes pudieran acceder 
+      <div class="carta-container">
+        <div class="carta">
+          <figure>
+            <img src="../assets/img/bio&gen.png" alt="">
+          </figure>
+          <div class="contenido">
+            <h3>Bio&Gen</h3>
+            <p>Pequeña empresa que buscaba abrirse paso en el mercado y que los clientes pudieran acceder 
               a su información por medio de un web site.
             </p>
+            <a href="./Biogen/index.html" target="_blank">Ir al sitio</a>
           </div>
-           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <h4 class="title"><img aling="lefth" src="./canaveral/assets/img/logo-canaveral-grande.png" width="70" height="60"><br><a href="./canaveral/index.html" target="_blank">Pagina Web de un restaurante</a></h4>
-            <p class="description">Restaurante de renombre en la región que que digitaliza su presencia en la web  </p>
+        </div>
+          <div class="carta">
+            <figure>
+              <img src="../assets/img/Canaveral.png  " alt="">
+            </figure>
+            <div class="contenido">
+              <h3>Cañaveral-Restaurante</h3>
+              <p >Pequeña empresa que buscaba abrirse paso en el mercado y que los clientes pudieran acceder 
+                a su información por medio de un web site.
+              </p>
+              <a href="./canaveral/index.html" target="_blank">Ir al sitio</a>
+            </div>
           </div>
-
+            <div class="carta">
+              <figure>
+                <img src="../assets/img/login.png" alt="">
+              </figure>
+              <div class="contenido">
+                <h3>Login</h3>
+                <p >Practica para crear un inicio de sesion vistoso.
+                </p>
+                <a href="./login/index.html" target="_blank">Ir al sitio</a>
+              </div>
+            </div>
       </div>
     </section><!-- End Services Section -->
 
