--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <div class="carta-container">
         <div class="carta">
           <figure>
-            <img src="../assets/img/bio&gen.png" alt="">
+            <img src="./assets/img/bio&gen.png" alt="">
           </figure>
           <div class="contenido">
             <h3>Bio&Gen</h3>
@@ -258,7 +258,7 @@
         </div>
           <div class="carta">
             <figure>
-              <img src="../assets/img/Canaveral.png  " alt="">
+              <img src="./assets/img/Canaveral.png  " alt="">
             </figure>
             <div class="contenido">
               <h3>Cañaveral-Restaurante</h3>
@@ -270,7 +270,7 @@
           </div>
             <div class="carta">
               <figure>
-                <img src="../assets/img/login.png" alt="">
+                <img src="./assets/img/login.png" alt="">
               </figure>
               <div class="contenido">
                 <h3>Login</h3>
