modificacion para entrar a login

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <h3>Login</h3>
                 <p >Practica para crear un inicio de sesion vistoso.
                 </p>
-                <a href="./login/index.html" target="_blank">Ir al sitio</a>
+                <a href="./Login/index.html" target="_blank">Ir al sitio</a>
               </div>
             </div>
       </div>
