--- a/Login/index.html
+++ b/Login/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="login-box">
-        <img class="avatar" src="../asset/img/user.png" alt="avatar">
+        <img class="avatar" src="./asset/img/user.png" alt="avatar">
         <h1>Login</h1>
         <form>
             <!--nombreUsuario-->
