--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <h3>Login</h3>
                 <p >Website dedicada al transporte.
                 </p>
-                <a href="./Translate/index.html" target="_blank">Ir al sitio</a>
+                <a href="./Traslate/index.html" target="_blank">Ir al sitio</a>
               </div>
             </div>
       </div>
